# zephyr

app/meshtalk/: CMakeLists.txt  prj.conf
app/meshtalk/src/: common.h  leds.c  leds.h  meshtalk.c  send.c  send.h  udprx.c  udptx.c
app/walkietalkie/: CMakeLists.txt  ot_commands.txt  prj.conf
app/walkietalkie/boards/: meshpill_nrf52840_sense.overlay
app/walkietalkie/src/: common.h  main.c  soundin.c  soundin.h  soundout.c  soundout.h  udp.c
boards/arm/meshpill/: Kconfig.board  Kconfig.defconfig  meshpill.dts  meshpill_defconfig
boards/midal/meshpill/: Kconfig.defconfig  Kconfig.meshpill  board.cmake  board.yml  meshpill-pinctrl.dtsi  meshpill.dts  meshpill.yaml  meshpill_common.dtsi  meshpill_defconfig  meshpill_nrf52840_sense.dts  meshpill_nrf52840_sense.yaml  meshpill_nrf52840_sense_defconfig  midal_meshpill_connector.dtsi
